# UnidbgTraceViewer

./: ALGORITHM_DETECTION_UI_DESIGN.md  ALGORITHM_RECONSTRUCTION_GUIDE.md  BUG_ANALYSIS.md  BUG_FIXES_SUMMARY.md  ENHANCED_TAINT_SUMMARY.md  ENHANCED_UI_FEATURES.md  IMPROVEMENTS_SUMMARY.md  README.md  TAINT_ANALYSIS_COMPARISON.md  examples_enhanced_taint.py  migrate_qt6.py  migrate_qt6_ast.py  pyproject.toml  test_qt6_migration.py  trace.txt
docs/: DEVELOPER_NOTES.md  DEVELOPMENT_HISTORY.md  ENHANCED_TAINT.md  IMPROVEMENTS.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.3.0.md  TAINT_ANALYSIS.md  USER_GUIDE.md
tests/: test_advanced_instructions.py  test_arm64_instructions.py  test_backward_taint.py
trace_viewer/: app.py  enhanced_code_view.py  enhanced_taint.py  mem_diff.py  memory_viewer.py  smart_register.py  taint_bitmap.py  trace_parser.py  utils.py  value_flow.py  widgets.py  workers.py
trace_viewer/tools/: reverse_output.py
